--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "githubviz-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://s8sachin.github.io/githubviz-react/",
   "dependencies": {
     "auth0-js": "^9.6.1",
     "axios": "^0.18.0",
+    "gh-pages": "^1.2.0",
     "history": "^4.7.2",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
@@ -21,6 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
