--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-test-renderer": "^16.4.1",
     "react-vis": "^1.9.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-undo": "^0.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
