--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "auth0-js": "^9.6.1",
     "axios": "^0.18.0",
+    "d3-shape": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
     "history": "^4.7.2",
     "react": "^16.4.1",
