--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-showcase": "^0.2.0",
     "react-spinkit": "^3.0.0",
     "react-vis": "^1.9.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "theme": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
